@@ -36,51 +36,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|search
-operator|.
-name|payloads
-operator|.
-name|AveragePayloadFunction
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|payloads
-operator|.
-name|PayloadTermQuery
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|spans
-operator|.
-name|SpanQuery
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|queryparser
 operator|.
 name|xml
@@ -107,6 +62,66 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|payloads
+operator|.
+name|AveragePayloadFunction
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|payloads
+operator|.
+name|PayloadScoreQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTermQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|w3c
 operator|.
 name|dom
@@ -118,7 +133,7 @@ begin_comment
 comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 begin_comment
-comment|/**  * Builder for {@link PayloadTermQuery}  */
+comment|/**  * Builder for {@link PayloadScoreQuery}  */
 end_comment
 begin_class
 DECL|class|BoostingTermBuilder
@@ -163,11 +178,14 @@ argument_list|(
 name|e
 argument_list|)
 decl_stmt|;
-name|PayloadTermQuery
+name|PayloadScoreQuery
 name|btq
 init|=
 operator|new
-name|PayloadTermQuery
+name|PayloadScoreQuery
+argument_list|(
+operator|new
+name|SpanTermQuery
 argument_list|(
 operator|new
 name|Term
@@ -175,6 +193,7 @@ argument_list|(
 name|fieldName
 argument_list|,
 name|value
+argument_list|)
 argument_list|)
 argument_list|,
 operator|new
